--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "gulp-autoprefixer": "^2.2.0",
     "gulp-compass": "~2.0.4",
     "gulp-concat": "^2.5.2",
-    "gulp-nodemon": "^2.0.3"
+    "gulp-jshint": "^1.10.0",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-notify": "^2.2.0",
+    "jshint-stylish": "^1.0.2",
+    "precommit-hook": "^2.0.1"
   },
   "scripts": {
-    "start": "gulp serve:dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp serve",
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "lint": "gulp lint"
   },
+  "pre-commit": ["lint"],
   "author": "",
   "license": "ISC"
 }
