--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "consolidate": "^0.12.1",
     "express": "^4.12.3",
     "express-handlebars": "^2.0.1",
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "mongodb": "^2.0.33"
   },
   "devDependencies": {
     "browser-sync": "^2.7.1",
@@ -27,7 +28,9 @@
     "test": "echo \"Error: no test specified\" && exit 0",
     "lint": "gulp lint"
   },
-  "pre-commit": ["lint"],
+  "pre-commit": [
+    "lint"
+  ],
   "author": "",
   "license": "ISC"
 }
